css/styles.css
/* CSS Reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Global Styles */
body {
    font-family: "Luxurious Roman", serif;
    font-size: 1.375rem;
    line-height: 1.2;
    color: hsla(0, 0%, 90%, 1);
    background-color: hsla(266, 100%, 25%, 1);
}

main, .contact {
    text-align: center;
}


/* Header */
header {
    background-color: hsla(0, 0%, 0%, 1);
    padding: 0.625rem;
    border-bottom: 0.063rem solid hsla(0, 0%, 90%, 1);
    z-index: 1;
    position: fixed;
    display: flex;
    height: 9.375rem;
    width: 100%;
    justify-content: center;
}

header h1 {
    font-size: 6.25rem;
}

.logo img {
    height: 9.375rem;
}

.logo {
    justify-self: end;
    display: flex;
}

.logo img:hover {
  transform: translateY(-4px); 
}

/* Navigation */
nav a {
    text-decoration: none;
    color: hsla(0, 0%, 90%, 1);
    font-weight: bold;
}

nav ul {
    display: flex;
    list-style: none;
    padding: 0.625rem;
}

nav li {
    margin: 0.625rem;
    padding-top: 6%;
}

nav a:hover {
    color: hsla(0, 0%, 100%, 1);
}

/* Hero Section */
.hero-logo {
    display: flex;
}

.hero-logo img {
    width: 100%;
    margin-top: 3rem;
}

/* Card Section */
.card img {
    width: 25rem;
    border-radius: 0.75rem;
    height: 25rem;
    display: block;
}

.card {
    box-shadow: 6px 6px 12px hsla(0, 0%, 0%, 0.75);
    border-radius: 0.75rem;
    max-width: 25rem;
    flex-wrap: wrap;
    display: inline-flex;
    margin: 0.625rem;
    max-height: auto;
    transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.card:hover {
  transform: translateY(-4px);
  box-shadow: 10px 10px 20px hsla(0, 0%, 0%, 0.85);
}   

.card-body {
    padding: 1.563rem;
    text-align: center;
    margin: 0.625rem;
    background-color: hsla(0, 0%, 0%, 0.75);
    border-radius: 0.75rem;
    max-width: 25rem;
    max-height: min-content;
}

.card-body p {
    margin-top: 1.6rem;
}

.card-body a, header a {
    text-decoration: none;
    color: hsla(0, 0%, 90%, 1);
}

#products h2, #team h3, #acrylics h2 {
    margin-bottom: 1.875rem;
    text-transform: uppercase;
}

#products, #team, #acrylics {
    margin-bottom: 12.5rem;
    scroll-margin-top: 9.375rem;
}

.team-description {
    margin-bottom: 1.875rem;
    line-height: 1.6;
    
}

/* Footer Section*/
h5, footer p {
    margin: 0.625rem;
    padding: 0.938rem;
}

/* Media Queries */
@media screen and (max-width: 1350px) {
    header h1 {
        font-size: 4.688rem;
        margin: 0.938rem;
    }

    nav li {
        font-size: 1.125rem;
    }
}

@media screen and (max-width: 1161px) {
    header h1 {
        font-size: 3.125rem;
        margin-top: 1.875rem;
    }

    nav li {
        font-size: 1rem;
        margin-top: 1rem;
    }
}

@media screen and (max-width: 986px) {
    header h1 {
        font-size: 2.5rem;
        margin-top: 2.5rem;
    }

    nav li {
        font-size: 0.75rem;
        margin-top: 1.875rem;
    }
}

@media screen and (max-width: 846px) {
    header h1 {
        font-size: 1.875rem;
        margin-top: 3rem;
    }

    .hero-logo img {
        margin-top: 6rem;
    }
}

@media screen and (max-width: 793px) {
    header h1 {
        display: none;
    }
}

